objects/wkcc__SurveyHistory__c.object
<CustomObject>
    <description>This object is created in order to track the history of send survey and schedule survey jobs.</description>
    <fields>
        <fullName>wkcc__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkcc__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkcc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__SurveySchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Schedule</label>
        <referenceTo>wkcc__SurveySchedule__c</referenceTo>
        <relationshipLabel>Survey Schedule History</relationshipLabel>
        <relationshipName>SurveyScheduleHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey History</label>
    <listViews>
        <fullName>wkcc__All</fullName>
        <columns>NAME</columns>
        <columns>wkcc__StartDate__c</columns>
        <columns>wkcc__EndDate__c</columns>
        <columns>wkcc__Status__c</columns>
        <columns>wkcc__SurveySchedule__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Survey Schedule History</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{00000000}</displayFormat>
        <label>Survey Schedule History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>